[gd_scene load_steps=5 format=3 uid="uid://d3df20gjcfbj7"]

[ext_resource type="Script" path="res://scenes/gui/inventory/scripts/pickup_item.gd" id="1_kkntt"]
[ext_resource type="Texture2D" uid="uid://dtx0442dijdm8" path="res://scenes/gui/inventory/items/assets/Icon14_16.png" id="2_jbx3i"]
[ext_resource type="FontFile" uid="uid://w38canxb0m7h" path="res://assets/m3x6.ttf" id="3_npe48"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8elgd"]
size = Vector2(32, 32)

[node name="PickupItem" type="Area2D"]
scale = Vector2(0.33, 0.33)
collision_layer = 0
collision_mask = 16
script = ExtResource("1_kkntt")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_jbx3i")

[node name="QuantityLabel" type="Label" parent="Sprite2D"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("3_npe48")
theme_override_font_sizes/font_size = 16
text = "x99
"
horizontal_alignment = 2
vertical_alignment = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_8elgd")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
